# bdm3

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  main.tex  pyproject.toml
code/A/: a1.ipynb  a2.py  a2_check.ipynb  a3.py  a4.ipynb
code/C/: README.md
code/utils/: eda_dashboard.py
data_zones/01_landing/cultural-sites/: cultural-sites_001.csv
latex/: appendix.tex  commands.tex  packages.tex
latex/chapters/: partA.tex  partB.tex  partC.tex
latex/imgs/: infa_overview.html  pipeline_abstraction.html
notebooks/: a1.ipynb  a2_check.ipynb  a3_check.ipynb
src/: config.py
src/airflow/: Dockerfile  requirements.txt
src/airflow/dags/: README.md  airflow_orchestration.py  train_deploy.py
src/airflow/dags/pipelines/: a2.py  a3.py  a4.py
src/dags/: airflow_orchestration.py  example.py
src/ml_experiments/: house_price_prediction.py
src/pipelines/: a2.py  a3.py  a4.py
src/streamlit_ui/: Dockerfile  app.py  requirements.txt
src/streamlit_ui/sections/: airflow.py  data_explorer.py  exploitation.py  formatted.py  home.py  landing.py  mlflow.py
src/streamlit_ui/sections/validation/: data_sanity.py  pipeline_monitoring.py
src/utils/: eda_dashboard.py
