[project]
name = "bdm3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pandoc>=2.4",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "ruff>=0.12.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
